--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t anshulk09/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true react-test npm run test
 
 after_success:
-  - docker build -t multi-client ./client
-  - docker build -t multi-nginx ./nginx
-  - docker build -t multi-server ./server
-  - docker build -t multi-worker ./worker
+  - docker build -t anshulk09/multi-client ./client
+  - docker build -t anshulk09/multi-nginx ./nginx
+  - docker build -t anshulk09/multi-server ./server
+  - docker build -t anshulk09/multi-worker ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push multi-client
-  - docker push multi-nginx
-  - docker push multi-server
-  - docker push multi-worker
+  - docker push anshulk09/multi-client
+  - docker push anshulk09/multi-nginx
+  - docker push anshulk09/multi-server
+  - docker push anshulk09/multi-worker
