--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t anshulk09/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true react-test npm run test
+  - docker run -e CI=true anshulk09/react-test npm run test
 
 after_success:
   - docker build -t anshulk09/multi-client ./client
