--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t anshulk09/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true anshulk09/react-test npm run test
